2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm, Services.pm: Changed "growl" to notify.  This
	  will be replaced with something more configurable post-0.24.

2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* *.pm: Updated POD validation errors.

2005-01-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Slightly rearrange order of functions, for clarity;
	expand documentation of inject_package.

2005-01-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Add documentation
	
2005-01-27  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn if %p/lib/charset.alias in .deb other than libgettextN.

2005-01-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm, Engine.pm: Clean up aptdb (UseBinaryDist)
	stuff:
		- Normal usage of regexes, safe use of 'open', OO usage in
		apt-cache parsing.
		- Moved aptgetable status into regular fink DB.
		- Fixed bug where fink would try to use apt-get to fetch a .deb when
		the apt-cache info comes from dpkg status (not a real repo).
		- Removed Package::is_in_apt and fixed all uses thereof.
		- Make fink complain if two packages have the same fullname.

2005-01-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix conditional_pkg_list whitespace removal again.
	* Services.pm: collapse_whitespace and pkglist2lol now remove
	leading/trailing whitespace.

2005-01-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make sure conditional_pkg_list always removes
	leading/trailing whitespace.

2005-01-25  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: gen_gcc_hash() now includes dpkg status, uses
	%r=0 for absent pkg.

2005-01-24  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Remove ncurses-dev from "important" (implied
	dependency) list.

2005-01-24  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Extract core of gcc* pkg data into new